feat(): Add web client id

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,9 @@
 <resources>
     <string name="app_name">Yoctu</string>
 
+    <!-- Google default web client ID -->
+    <string name="my_default_web_client_id">791157279130-cg8vmf3alqpme3lg47sq7o0m9ehaf9cb.apps.googleusercontent.com</string>
+
     <!-- FCM channel id -->
     <string name="notification_channel_id">yoctu_notification</string>
 
