feat(): Add a new string for loadin in login fragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,5 +21,6 @@
     <string name="login_fragment_empty_list">There are not channels !</string>
     <string name="login_fragment_register">Register</string>
     <string name="login_fragment_there_are_not_chosen">You have to choose a channel</string>
+    <string name="login_fragment_text_loading_data">Loading data from server...</string>
 
 </resources>
