feat(): Add new strings

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,4 @@
 <resources>
-    <string name="app_name">Yoctu</string>
 
     <!-- Google default web client ID -->
     <string name="my_default_web_client_id">791157279130-cg8vmf3alqpme3lg47sq7o0m9ehaf9cb.apps.googleusercontent.com</string>
@@ -19,7 +18,7 @@
 
     <!-- login fragment -->
     <string name="login_fragment_empty_list">There are not channels !</string>
-    <string name="login_fragment_register">Register</string>
+    <string name="login_fragment_register">Save my toppics</string>
     <string name="login_fragment_there_are_not_chosen">You have to choose a channel</string>
     <string name="login_fragment_text_loading_data">Loading data from server...</string>
     <string name="login_fragment_text_google_sign_in">Sign in with Google</string>
