--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,7 +15,7 @@
     <string name="dialog_connectivity_enable">activer</string>
     <string name="dialog_connectivity_cancel">annuler</string>
     <string name="dialog_connectivity_refused_to_enable">Vous avez décidé de ne pas vous connecter !</string>
-    <string name="login_fragment_title_toppics">Toppics</string>
+    <string name="login_fragment_title_toppics">Topics</string>
     <string name="login_fragment_title_sign_in">Connexion</string>
 
     <string name="app_txt_connection_disable">L\'état de votre réseau est faible !</string>
@@ -29,7 +29,7 @@
 
     <!-- menu notification -->
     <string name="menu_notification_sign_out">Déconnexion</string>
-    <string name="menu_notification_channels">Mes toppics</string>
+    <string name="menu_notification_channels">Mes topics</string>
 
     <!-- not logged-->
     <string name="login_not_logged">Vous devez vous connecter pour voir la liste des messages</string>
