--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,10 +15,17 @@
     <string name="dialog_connectivity_enable">activer</string>
     <string name="dialog_connectivity_cancel">annuler</string>
     <string name="dialog_connectivity_refused_to_enable">Vous avez décidé de ne pas vous connecter !</string>
-    <string name="login_fragment_title_toppics">Topics</string>
-    <string name="login_fragment_title_sign_in">Connexion</string>
 
     <string name="app_txt_connection_disable">L\'état de votre réseau est faible !</string>
+
+    <!-- login fragment -->
+    <string name="login_fragment_empty_list">Il n\'y a pas encore de toppics !</string>
+    <string name="login_fragment_register">Enregistrer mes topics</string>
+    <string name="login_fragment_there_are_not_chosen">Vous devez choisir au moins un toppic</string>
+    <string name="login_fragment_text_loading_data">Chargement des données à partir du server...</string>
+    <string name="login_fragment_text_google_sign_in">Connexion à Google</string>
+    <string name="login_fragment_title_toppics">Topics</string>
+    <string name="login_fragment_title_sign_in">Connexion</string>
 
     <!-- notification -->
     <string name="notif_fragment_text_loading">Chargement des messages...</string>
@@ -35,6 +42,5 @@
     <string name="login_not_logged">Vous devez vous connecter pour voir la liste des messages</string>
 
     <string name="time_at">à</string>
-
 
 </resources>
