--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,11 +37,11 @@
 
     <!-- add topic URL -->
     <string name="add_topic_url_view_title">Gérer mon URL</string>
-    <string name="add_topic_url_current_url_text">URL actuel :</string>
+    <string name="add_topic_url_current_url_text">URL ACTUEL</string>
     <string name="add_topic_url_current_url_save_new_url_btn">Enregistrer</string>
     <string name="add_topic_url_current_url_replace_url_btn">Remplacer</string>
-    <string name="add_topic_url_current_url_text_url">NOUVEAU :</string>
-    <string name="add_topic_url_current_url_hint">"https://montopicurl.com/topics</string>
+    <string name="add_topic_url_current_url_text_url">NOUVEAU </string>
+    <string name="add_topic_url_current_url_hint">"https://montopicurl.com/api/topics</string>
     <string name="add_topic_url_error_message_not_valid">URL NON VALIDE ! </string>
 
     <!-- Topic -->
